# Fight

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: glad.cmake  imgui.cmake  includes.cmake  vulkan.cmake
data/bgm/: bgm.lua
data/char/vaki/: ai.lua  def.lua  moves.lua  palettes.pal4  script.lua  vaki.char  vaki.fdat  vaki.vt4  vaki8.lzs3  vaki_.char
data/char/vaki/effect/: circle.lzs3  evilstar.lzs3  stars.lzs3
data/hud/: hud.lua
data/sfx/: sfx.lua
data/stage/: bg.lua  bg.lzs3  stages.lua
engine/: CMakeLists.txt  actor.cpp  actor.h  audio.cpp  audio.h  battle_interface.h  battle_scene.cpp  battle_scene.h  camera.cpp  chara.cpp  chara.h  command_inputs.cpp  command_inputs.h  framedata.cpp  framedata.h  hitbox_renderer.cpp  hud.cpp  hud.h  main.cpp  netplay.cpp  netplay.h  raw_input.cpp  raw_input.h  resource.rc  stage.cpp  stage.h  util.cpp  util.h  window.cpp  window.h
modules/: CMakeLists.txt
modules/common/: CMakeLists.txt  framedata_io.cpp  framedata_io.h  gfx_handler.cpp  gfx_handler.h  hitbox_renderer.cpp  hitbox_renderer.h  particle.cpp  particle.h  renderer.cpp  renderer.h  shader.cpp  texture.cpp  texture.h  ubo.cpp  vao.cpp  vao.h  vertex_buffer.cpp  vertex_buffer.h
modules/common/opengl/: gl_renderer.cpp  gl_renderer.h
modules/common/shader/: box.frag  box.vert  hud.frag  hud.vert  particle.frag  particle.vert  shader.frag  shader.vert  sprite.frag  sprite.vert
modules/common/vk/: allocation.cpp  allocation.h  format_info.cpp  format_info.h  forward.h  pipeline.cpp  pipeline.h  pipeline_builder.cpp  pipeline_builder.h  pipeset.cpp  pipeset.hpp  renderer.cpp  renderer.h
modules/common/vulkan/: allocation.cpp  allocation.h  pipeline_builder.cpp  pipeline_builder.h  vk_renderer.cpp  vk_renderer.h
modules/graphics/: CMakeLists.txt
modules/image/: image.cpp  image.h
submodules/glad/include/glad/: glad.h
submodules/spirv-reflect/: spirv_reflect.c  spirv_reflect.h
submodules/spng-miniz/: CMakeLists.txt
submodules/squish/: CMakeLists.txt  squish.cpp
submodules/vma-hpp/: vmahppimp.cpp
tools/: CMakeLists.txt  palettec.py
tools/compImage/: CMakeLists.txt  main.cpp
tools/frametool/: CMakeLists.txt  draw_window.h  framedata.cpp  framedata.h  main.cpp  main_frame.cpp  main_frame.h  main_pane.cpp  main_pane.h  render.cpp  render.h  window.cpp  window.h
tools/packImage/: CMakeLists.txt  pack_image.cpp  pack_image.h
